# blif-parser

./: Cargo.toml  README.md
src/: lib.rs  parser.rs  primitives.rs
tests/: Adder.lut.blif  Const.lut.blif  GCD.lut.blif
