[package]
name = "blif-parser"
version = "0.1.0"
edition = "2021"
authors = ["Joonho Whangbo <joonho.whangbo@berkeley.edu>"]
license = "MIT"
readme = "README.md"
description = "Rust parser for BLIF files"
repository = "https://github.com/ucb-bar/blif-parser/"

[dependencies]
indexmap = "2.5.0"
nom = "7.1.3"
strum = "0.26.3"
strum_macros = "0.26.4"
