[package]
name = "blif-parser"
version = "0.1.3"
edition = "2021"
authors = ["Joonho Whangbo <joonho.whangbo@berkeley.edu>"]
license = "MIT"
readme = "README.md"
description = "Rust parser for BLIF files"
repository = "https://github.com/ucb-bar/blif-parser/"

[dependencies]
derivative = "2.2.0"
indexmap = { version = "2.5.0", features = ["serde"] }
nom = "7.1.3"
serde = { version = "1.0.210", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
